--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -10,7 +10,7 @@ message.nulluserrole=The userRole is not identified
 message.authorizationerror=Authorization error
 message.invalideprice=The price has invalid value
 message.invalidecardvalues=The fields have invalid values
-message.invalidroomnumericfieldvalue = Numeric fields have invalid values
+message.invalidroomnumericfieldvalue=Numeric fields have invalid values
 message.formsettingserror=Some of form fields have invalid settings. Tell admin
 message.invaliddatesorder=CheckOut date should go after checkIn date
 message.notenoughmoney=There is not enough money on the credit card
