Adding new service class plus refactoring. Adding 2 level cache configuration(commented)

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -15,3 +15,4 @@ message.formsettingserror=Some of form fields have invalid settings. Tell admin
 message.invaliddatesorder=CheckOut date should go after checkIn date
 message.notenoughmoney=There is not enough money on the credit card
 message.roomwasbooked =The room has been already booked for your chosen period by someone else
+message.cardnotexistserror = The Card with inputted card number doesn't exist
