New project name. Continue toSpring reformation. Working security.

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -14,5 +14,7 @@ message.invalidroomnumericfieldvalue=Numeric fields have invalid values
 message.formsettingserror=Some of form fields have invalid settings. Tell admin
 message.invaliddatesorder=CheckOut date should go after checkIn date
 message.notenoughmoney=There is not enough money on the credit card
-message.roomwasbooked =The room has been already booked for your chosen period by someone else
-message.cardnotexistserror = The Card with inputted card number doesn't exist
+message.roomwasbooked=The room has been already booked for your chosen period by someone else
+message.cardnotexistserror=The Card with inputted card number doesn't exist
+message.roompriceupdated=The Price was updated
+message.roomadded=The Room was successfully added
