before internationalization injection

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
 message.loginerror=Login and/or password are not correct
 message.successoperation=The operation was successfully completed
+message.successpayment=The order was paid. The payment was successful
+message.successcardadding=The card was successfully added
+message.successrequestroom=The order was created. The request is sent to administrator
 message.invalidnonstringformat=Invalid nonString format. The field is empty or has wrong type
 message.userexistserror=Such user already exists
 message.roomexistserror=Room with such number already exists
